Bug 1746795 - Make gfxPlatformFontList::CommonFontFallback honor a preference for emoji presentation when searching its font list, rather than just returning the first match for the codepoint. r=jwatt, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D136730